chore: Use replace() instead of replaceAll() where no regexp replacement is needed